# elenchus

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  elenchus.config.example.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
docs/: DETECTION_REFERENCE.md  IMPLEMENTATION_ROADMAP.md  MULTI_LANGUAGE_DETECTION.md  MULTI_LANGUAGE_DETECTION_ANALYSIS.md  README.md  RESEARCH_COMPLETE.txt  RESEARCH_SUMMARY.md  interrogation-engine-v2-spec.md  plan-smart-interrogation.md  socratic-interrogation-design.md
docs/specs/: spec-spec-1769301124101-ehdo3ca.json  spec-spec-1769301124101-ehdo3ca.md  spec-spec-1769301124101-ehdo3ca.yaml
examples/: claude-flow-execution.md
scripts/: generate-spec.ts  run-interrogation.ts  submit-answers.ts
src/: index.ts  server.ts
src/engines/: answer-extractor.test.ts  answer-extractor.ts  answer-validator.ts  challenge-mode.ts  fact-extractor.ts  index.ts  interrogation-v2.ts  llm-client.ts  llm-contradiction-detector.ts  llm-question-generator.test.ts  llm-question-generator.ts  llm-signal-detector.test.ts  llm-signal-detector.ts  llm-spec-decomposer.ts  llm-spec-enhancer.ts  quality-detector.test.ts  quality-detector.ts  question-generator.ts  round-controller.ts  signal-detector.test.ts  signal-detector.ts  spec-synthesizer.ts
src/prompts/: index.ts
src/resources/: index.ts
src/services/: container.ts  index.ts
src/storage/: index.test.ts  index.ts
src/tools/: analyze.ts  answer.ts  checkpoint.ts  compile.test.ts  compile.ts  context.ts  contradictions.ts  (+20 more)
tests/fixtures/languages/python-uv/: pyproject.toml
(+53 files in other folders)
